removed debug generic files

--- a/input.toml
+++ b/input.toml
@@ -19,19 +19,19 @@ replace.C__TYPEHEADER__ = "header_include"
 replace.C__PREFIX__ = "prefix"
 replace.C__PREFIXUP__ = "prefix"
 
-[[create.hashmap]]
-headers_output = "include/me/hashmap/"
-sources_output = "src/hashmap/"
-replace.C__VALTYPE__ = "t_str"
-replace.C__KEYTYPE__ = "t_str"
-replace.C__TYPEHEADER__ = ''
-replace.C__PREFIX__ = "str"
-replace.C__PREFIXUP__ = "STR"
-
-[[create.vec]]
-sources_output = "src/vec/"
-headers_output = "include/me/vec/"
-replace.C__TYPENAME__ = "t_str"
-replace.C__TYPEHEADER__ = ''
-replace.C__PREFIX__ = "str"
-replace.C__PREFIXUP__ = "STR"
+#[[create.hashmap]]
+#headers_output = "include/me/hashmap/"
+#sources_output = "src/hashmap/"
+#replace.C__VALTYPE__ = "t_str"
+#replace.C__KEYTYPE__ = "t_str"
+#replace.C__TYPEHEADER__ = ''
+#replace.C__PREFIX__ = "str"
+#replace.C__PREFIXUP__ = "STR"
+#
+#[[create.vec]]
+#sources_output = "src/vec/"
+#headers_output = "include/me/vec/"
+#replace.C__TYPENAME__ = "t_str"
+#replace.C__TYPEHEADER__ = ''
+#replace.C__PREFIX__ = "str"
+#replace.C__PREFIXUP__ = "STR"
