--- a/input.toml
+++ b/input.toml
@@ -1,6 +1,6 @@
 [definition.vec]
-headers = [".generic_sources/header/vec_C__PREFIX__.h"]
-sources = [".generic_sources/src/vec_C__PREFIX__.c"]
+headers = ["generic_sources/header/vec_C__PREFIX__.h__TEMPLATE__"]
+sources = ["generic_sources/src/vec_C__PREFIX__.c__TEMPLATE__"]
 replace.C__TYPENAME__ = "type"
 replace.C__TYPEHEADER__ = "header_include"
 replace.C__PREFIX__ = "prefix"
@@ -8,10 +8,10 @@ replace.C__PREFIXUP__ = "prefix"
 
 
 [definition.hashmap]
-headers = [".generic_sources/header/hashmap_C__PREFIX__.h"]
+headers = ["generic_sources/header/hashmap_C__PREFIX__.h__TEMPLATE__"]
 sources = [
-	".generic_sources/src/hashmap_C__PREFIX__.c",
-	".generic_sources/src/hashmap_C__PREFIX___utils.c",
+	"generic_sources/src/hashmap_C__PREFIX__.c__TEMPLATE__",
+	"generic_sources/src/hashmap_C__PREFIX___utils.c__TEMPLATE__",
 ]
 replace.C__VALTYPE__ = "type"
 replace.C__KEYTYPE__ = "type"
@@ -19,19 +19,19 @@ replace.C__TYPEHEADER__ = "header_include"
 replace.C__PREFIX__ = "prefix"
 replace.C__PREFIXUP__ = "prefix"
 
-#[[create.hashmap]]
-#headers_output = "include/me/hashmap/"
-#sources_output = "src/hashmap/"
-#replace.C__VALTYPE__ = "t_str"
-#replace.C__KEYTYPE__ = "t_str"
-#replace.C__TYPEHEADER__ = ''
-#replace.C__PREFIX__ = "str"
-#replace.C__PREFIXUP__ = "STR"
-#
-#[[create.vec]]
-#sources_output = "src/vec/"
-#headers_output = "include/me/vec/"
-#replace.C__TYPENAME__ = "t_str"
-#replace.C__TYPEHEADER__ = ''
-#replace.C__PREFIX__ = "str"
-#replace.C__PREFIXUP__ = "STR"
+[[create.hashmap]]
+headers_output = "include/me/hashmap/"
+sources_output = "src/hashmap/"
+replace.C__VALTYPE__ = "t_str"
+replace.C__KEYTYPE__ = "t_str"
+replace.C__TYPEHEADER__ = ''
+replace.C__PREFIX__ = "str"
+replace.C__PREFIXUP__ = "STR"
+
+[[create.vec]]
+sources_output = "src/vec/"
+headers_output = "include/me/vec/"
+replace.C__TYPENAME__ = "t_str"
+replace.C__TYPEHEADER__ = ''
+replace.C__PREFIX__ = "str"
+replace.C__PREFIXUP__ = "STR"
