--- a/input.toml
+++ b/input.toml
@@ -3,6 +3,7 @@ headers = ["generic_sources/header/vec_C__PREFIX__.h__TEMPLATE__"]
 sources = [
 	"generic_sources/src/vec_C__PREFIX__.c__TEMPLATE__",
 	"generic_sources/src/vec_C__PREFIX___functions2.c__TEMPLATE__",
+	"generic_sources/src/vec_C__PREFIX___functions3.c__TEMPLATE__",
 ]
 replace.C__TYPENAME__ = "type"
 replace.C__TYPEHEADER__ = "header_include"
